Nearly Finished Homepage

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Raleway:200,400,600" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="/img/church-favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +30,8 @@
         <div class="col-lg-8 col-md-6 col-xs-7 site-title">
             <div class="brand-txt">
                 <h1>Immaculate Conception Church</h1>
-                <h2>Millhousen, Indiana</h2> </div>
+                <h2>Millhousen, Indiana</h2>
+            </div>
         </div>
         <div class="col-lg-2 col-md-3 col-xs-3 brand-right">
             <div class="quick-info">
@@ -69,7 +68,6 @@
                         <ul class="dropdown-menu">
                             <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
                             <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
-                            <li><a href="/faith-formation/adult/">Adult Education</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="/faith-formation/rcia/">RCIA</a></li>
                         </ul>
@@ -78,6 +76,16 @@
                     <li><a href="/calendar/">Events Calendar</a></li>
                     <li><a href="/bulletins/">Bulletins</a></li>
                     <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
+                    <li><a href="https://gallery.millhousenchurch.com/">Photo Gallery</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/about/auction/">Auction</a></li>
+
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -94,16 +102,6 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="img-slide1">
-                    <div class="carousel-caption">
-                        <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
-                        <a href="/about/history/">
-                            <button type="button" class="btn btn-default">Our History</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
                 <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Join us for Mass every Sunday at 8 AM!</p>
@@ -116,9 +114,19 @@
             <div class="item">
                 <div class="img-slide3">
                     <div class="carousel-caption">
-                        <p>Hosting inspriational speakers to brighten your life</p>
-                        <a href="/faith-formation/adult/">
-                            <button type="button" class="btn btn-default">View Upcoming Formation Events</button>
+                        <p>The parish auction is approaching quickly!</p>
+                        <a href="/events/auction/">
+                            <button type="button" class="btn btn-default">Learn More</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="img-slide1">
+                    <div class="carousel-caption">
+                        <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
+                        <a href="/about/history/">
+                            <button type="button" class="btn btn-default">Our History</button>
                         </a>
                     </div>
                 </div>
@@ -139,66 +147,116 @@
     </div>
     <div class="stripe white-stripe">
         <div class="upcoming-events">
-            <ul id="events-upcoming" class="list1"></ul> <a href="calendar/" class="calendar-link">View Full Calendar</a> </div>
+            <ul id="events-upcoming" class="list1"></ul>
+
+            <a href="/calendar/">
+                <button type="button" class="btn btn-inv btn-calendar">View the Full Calendar</button>
+            </a>
+        </div>
     </div>
     <div class="stripe gray-stripe">
         <h2>Our Staff</h2>
         <div class="row">
-            <div class="col-md-4"> <img src="/img/sr-donna.jpg" alt="Sister Donna Prickel" height="200" />
-                <h4>Sister Donna Prickel</h4> </div>
-            <div class="col-md-4"> <img src="/img/fr-bill.jpg" alt="Father William Turner" height="200" />
-                <h4>Father Bill Turner</h4> </div>
-            <div class="col-md-4"><img src="/img/kathy-westrick.jpg" alt="Kathy Westrick" height="200" />
-                <h4>Kathy Westrick</h4></div>
-            <div class="col-md-6"><img src="/img/fr-john.jpg" alt="Father John Geis" height="200" />
-                <h4>Father John Geis</h4></div>
-            <div class="col-md-6"><img src="/img/sr-dianne.jpg" alt="Sister Dianne Kaimann" height="200" />
-                <h4>Sister Dianne Kaimann</h4></div>
+            <div class="col-md-4"> <img src="/img/sr-donna-prickel.jpg" alt="Sister Donna Prickel" height="200" />
+                <h4>Sister Donna Prickel</h4>
+                <h5>Parish Life Coordinator</h5>
+            </div>
+            <div class="col-md-4"> <img src="/img/fr-bill-turner.png" alt="Father William Turner" height="200" />
+                <h4>Father Bill Turner</h4>
+                <h5>Sacramental Minister</h5>
+            </div>
+            <div class="col-md-4"><img src="https://placeimg.com/170/200/nature" alt="Kathy Westrick" height="200" />
+                <h4>Kathy Westrick</h4>
+                <h5>Director of Religious Education</h5>
+            </div>
+            <div class="col-md-6"><img src="/img/fr-john-geis.png" alt="Father John Geis" height="200" />
+                <h4>Father John Geis</h4>
+                <h5>Sacramental Minister</h5>
+            </div>
+            <div class="col-md-6"><img src="https://placeimg.com/170/200/nature" alt="Sister Dianne Kaimann" height="200" />
+                <h4>Sister Dianne Kaimann</h4>
+                <h5>Bookkeeper</h5>
+            </div>
+
         </div>
-    </div>
-    <div class="stripe white-stripe">
-        <h2>Our Neighboring Parishes</h2> </div>
-    <div class="stripe gray-stripe">
-        <div class="community">
+        <a href="/about/staff/">
+            <button type="button" class="btn btn-inv btn-staff">Learn More</button>
+        </a>
+        <div class="stripe white-stripe">
+            <h2>Catholic Community</h2>
+            <h3>Our Cohort</h3>
             <div class="row">
-                <div class="col-md-4">
-                    <div class="photo-gallery">
-                        <h2>Photo Gallery</h2> <span id="random_image">
+                <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/103.jpg" alt="St. Maurice Napoleon" height="200" />
+                    <h4>St. Maurice</h4>
+                    <h5>Napoleon</h5>
+                    <a href="http://stmauricechurch.org/index.html">
+                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    </a>
+                </div>
+                <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/097.jpg" alt="Immaculate Conception Millhousen" height="200" />
+                    <h4>Immaculate Conception</h4>
+                    <h5>Millhousen</h5>
+                    <a href="/about/mass/">
+                        <button type="button" class="btn btn-inv">Mass Time</button>
+                    </a>
+                </div>
+                <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/116C.jpg" alt="St. John the Baptist Osgood" height="200" />
+                    <h4>St. John the Baptist</h4>
+                    <h5>Osgood</h5>
+                    <a href="http://www.stjohncatholicchurchosgood.com/">
+                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    </a>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-6"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Roman_Catholic_Archdiocese_of_Indianapolis.svg" alt="ArchIndy Coat of Arms" height="200" />
+                    <h3>Archdiocese of Indianapolis</h3>
+                    <a href="http://www.archindy.org/">
+                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    </a>
+                </div>
+                <div class="col-md-6"><img src="/img/deanery.jpg" alt="Batesville Deanery Logo" height="200" />
+                    <h3>Batesville Deanery</h3>
+                    <a href="http://batesvilledeanery.com/">
+                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="stripe gray-stripe">
+            <div class="community">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="photo-gallery">
+                            <h3>Photo Gallery</h3> <span id="random_image">
   <script type="text/javascript"
       src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=9&size=square&target=_blank"
       async>
   </script>
                     </span>
-                        <a href="https://icgallery.flexstart.me/">
-                            <button type="button" class="btn btn-default">Visit the Gallery</button>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h4>Daily Readings</h4>
-                            <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
-                        </div>
-                        <div class="col-md-6">
-                            <h4>Search your faith!</h4>
-                            <form action="http://www.catholicsearch.net/q.php" method="get">
-                                <div style="background: #FFF; font: 11px/17px arial,sans-serif; width: 148px; border: 1px solid #DDD; text-align: center; padding: 4px 0;"><a href="http://www.catholicsearch.net" style="color: #03C; text-decoration: none;" title="Search 1000+ Catholic websites."><strong>Catholic Search Engine</strong></a>
-                                    <br />
-                                    <input type="text" name="q" style="width: 88px; margin: 3px 0;" />
-                                    <input style="width: 36px; margin: 3px 0;" type="submit" value="Go" />
-                                    <br /><span style="font: 9px/10px verdana,sans-serif;color:#777">Powered by Google</span></div>
-                            </form>
-                        </div>
-                        <div class="col-md-12">
-                            <iframe style="width: 90%; height: 325px; border: none; padding-top: 30px;" src="https://feed.mikle.com/widget/v2/23358/"></iframe>
+                            <a href="https://icgallery.flexstart.me/">
+                                <button type="button" class="btn btn-default">Visit the Gallery</button>
+                            </a>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="social-media">
-                        <h3>Like us on Facebook</h3>
-                        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" scrolling="no" frameborder="0" allowTransparency="true" class="facebook-embed"></iframe>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <h3>Daily Readings</h3>
+                                <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
+                            </div>
+                            <div class="col-md-12">
+                                <iframe style="width: 90%; height: 325px; border: none; padding-top: 30px;" src="https://feed.mikle.com/widget/v2/23358/"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="social-media">
+                            <h3>Like us on Facebook</h3>
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" scrolling="no" frameborder="0" allowTransparency="true" class="facebook-embed"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -215,19 +273,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>
         formatGoogleCalendar.init({
-            calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/events?key=AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8&singleEvents=true&orderBy=startTime'
-            , past: false
-            , upcoming: true
-            , sameDayTimes: true
-            , dayNames: false
-            , pastTopN: -1
-            , upcomingTopN: 5
-            , itemsTagName: 'li class="event"'
-            , upcomingSelector: '#events-upcoming'
-            , pastSelector: '#events-past'
-            , upcomingHeading: '<h2>Upcoming Events</h2>'
-            , pastHeading: '<h2>Past Events</h2>'
-            , format: ['<h4>', '*summary*', '</h4>', '*date*']
+            calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/millhousenchurch.com_9og4v0j9kgl200r65quv01d65c@group.calendar.google.com/events?key=AIzaSyAzEfSIZVELF5T1ZDrd-xwWNwRc69s-Zm8&singleEvents=true&orderBy=startTime',
+            past: false,
+            upcoming: true,
+            sameDayTimes: true,
+            dayNames: false,
+            pastTopN: -1,
+            upcomingTopN: 6,
+            itemsTagName: 'li class="event"',
+            upcomingSelector: '#events-upcoming',
+            pastSelector: '#events-past',
+            upcomingHeading: '<h2>Upcoming Events</h2>',
+            pastHeading: '<h2>Past Events</h2>',
+            format: ['<h4>', '*summary*', '</h4>', '*date*']
         });
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -235,16 +293,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
     <script src="/js/outdated-browser.js"></script>
-    <script>
-        $.fn.extend({
-            animateCss: function (animationName) {
-                var animationEnd = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
-                this.addClass('animated ' + animationName).one(animationEnd, function () {
-                    $(this).removeClass('animated ' + animationName);
-                });
-            }
-        });
-    </script>
 </body>
 
 </html>
