--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -2,88 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  {{.Include "/templates/head.html"}}
     <title>Contact Us - Immaculate Conception Church</title>
-    <!-- Bootstrap -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="icon" href="/img/church-favicon.png">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <meta name="description" content="If you need to get in touch with us, please don't hesitate!">
 </head>
 
-<body>
-    <div id="outdated"></div>
-    <div class="row branding-header">
-        <div class="col-md-3 brand-left"><img class="brand" src="/img/church-logo.svg" alt="Immaculate Conception Logo"></div>
-        <div class="col-md-6">
-            <div class="brand-txt">
-                <h1>Immaculate Conception Church</h1>
-                <h2>Millhousen, Indiana</h2> </div>
-        </div>
-        <div class="col-md-3 brand-right">
-            <div class="quick-info">
-                <ul>
-                    <li>PLC: Sister Donna Prickel</li>
-                    <li id="mass">Mass: Sunday at 8 AM</li>
-                    <li><a href="tel:8125912362">(812) 591-2362</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="etched-pattern">
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="nav">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                </div>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/about/staff/">Staff</a></li>
-                                <li><a href="/about/lay-leadership/">Lay Leadership</a></li>
-                                <li><a href="/about/history/">Parish History</a></li>
-                                <li><a href="javascript:void(0);" onclick="$('#mass').animateCss('wobble');">Mass</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/about/directions/">Directions</a></li>
-                                <li class="active"><a href="/about/contact/">Contact <span class="sr-only">(current)</span></a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Faith Formation <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/faith-formation/elementary/">Pre-K thru 5th Grade</a></li>
-                                <li><a href="/faith-formation/high-school/">6th thru 12th Grade</a></li>
-                                <li><a href="/faith-formation/adult/">Adult Education</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="/faith-formation/rcia/">RCIA</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="/sacraments/">Sacraments</a></li>
-                        <li><a href="/calendar/">Events Calendar</a></li>
-                        <li><a href="/bulletins/">Bulletins</a></li>
-                        <li><a href="/ministry-schedule/">Ministry Schedule</a></li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container-fluid -->
-        </nav>
+<body>    		{{.Include "/templates/header.html"}}
+
         <div class="container">
             <h1>Contact Us</h1>
             <div class="row contact-columns">
@@ -148,31 +73,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <footer class="footer">
-        <div class="jagged-pattern"></div>
-        <div class="container">
-            <p class="text-muted pull-left">Designed by <a href="https://webdesign.flexstart.me">Kenny Stier</a></p>
-            <p class="text-muted pull-right">Contribute to the site on <a href="https://github.com/19kestier/millhousenchurch.com/">GitHub</a></p>
-        </div>
-    </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/outdated-browser/1.1.3/outdatedbrowser.min.js"></script>
-    <script src="/js/outdated-browser.js"></script>
-    <script>
-        $.fn.extend({
-            animateCss: function (animationName) {
-                var animationEnd = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
-                this.addClass('animated ' + animationName).one(animationEnd, function () {
-                    $(this).removeClass('animated ' + animationName);
-                });
-            }
-        });
-    </script>
+    {{.Include "/includes/footer.html"}}
+
 </body>
 
 </html>
