Fixed Footer Template

--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-    {{.Include "/includes/footer.html"}}
+    {{.Include "/templates/footer.html"}}
 
 </body>
 
