--- a/about/directions/index.html
+++ b/about/directions/index.html
@@ -16,7 +16,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3091.4031749322467!2d-85.4402256843403!3d39.2110081360016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886af4757ed6bcb1%3A0x8cf6d587f09f91ff!2sImmaculate+Conception+Church!5e0!3m2!1sen!2sus!4v1485105501718" frameborder="0" style="border:0"></iframe>
             </div>
         </div>
-    {{.Include "/includes/footer.html"}}
+    {{.Include "/templates/footer.html"}}
 
 </body>
 
