--- a/about/history/index.html
+++ b/about/history/index.html
@@ -15,7 +15,7 @@
                 <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1stSJntKvx891TASu1W_WAyBNen0qPrW1k9bQi4srF9o&font=OldStandard&lang=en&timenav_position=top&initial_zoom=2&height=650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0' style="border:0"></iframe>
             </div>
         </div>
-    {{.Include "/includes/footer.html"}}
+    {{.Include "/templates/footer.html"}}
 </body>
 
 </html>
