--- a/bulletins/index.html
+++ b/bulletins/index.html
@@ -18,7 +18,7 @@
             <h3>Need an older bulletin?</h3>
             <p>If you are in need of a past bulletin, <a href="/bulletins/files/">browse our archives</a>.</p>
         </div>
-    {{.Include "/includes/footer.html"}}
+    {{.Include "/templates/footer.html"}}
 </body>
 
 </html>
