--- a/faith-formation/elementary/index.html
+++ b/faith-formation/elementary/index.html
@@ -9,7 +9,7 @@
 <body>
     		{{.Include "/templates/header.html"}}
 
-    		{{.Include "/includes/footer.html"}}
+    		{{.Include "/templates/footer.html"}}
     
 </body>
 
