--- a/about/lay-leadership/index.html
+++ b/about/lay-leadership/index.html
@@ -462,7 +462,7 @@
                 </div>
             </div>
         </div>
-        {{.Include "/includes/footer.html"}}
+        {{.Include "/templates/footer.html"}}
 </body>
 
 </html>
