--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
         </div>
-    {{.Include "/includes/footer.html"}}
+    {{.Include "/templates/footer.html"}}
 
 </body>
 
