--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         
-        {{.Include "/includes/footer.html"}}
+        {{.Include "/templates/footer.html"}}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.js"></script>
