--- a/faith-formation/adult/index.html
+++ b/faith-formation/adult/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <hr/> </div>
-            {{.Include "/includes/footer.html"}}
+            {{.Include "/templates/footer.html"}}
 </body>
 
 </html>
