--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
         </div>
     </div>
-    		{{.Include "/includes/footer.html"}}
+    		{{.Include "/templates/footer.html"}}
     <script src="/js/format-google-calendar.js"></script>
     <script>
         formatGoogleCalendar.init({
