--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -2,84 +2,84 @@
 <html lang="en">
 
 <head>
-  {{.Include "/templates/head.html"}}
+    {{.Include "/templates/head.html"}}
     <title>Staff - Immaculate Conception Church</title>
     <meta name="description" content="We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!">
 </head>
 
 <body>
-  {{.Include "/templates/header.html"}}
+    {{.Include "/templates/header.html"}}
 
-        <div class="container">
-            <h3>Staff</h3>
-            <p>We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!</p>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="business-card">
-                        <div class="media">
-                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/2199fa4a7cd032a11f82cd2ed717fbdc?d=identicon&s=120&r=g"> </div>
-                            <div class="media-body">
-                                <h2 class="media-heading">Sister Donna Prickel</h2>
-                                <div class="job">Parish Life Coordinator</div>
-                                <div class="mail"><a href="mailto:sisterdonna@millhousenchurch.com">sisterdonna@millhousenchurch.com</a> </div>
-                                <div class="mail">Home: <a href="tel:8125912362">812-591-2362</a> - Mobile: <a href="tel:5134102600">513-410-2600</a></div>
-                            </div>
+    <div class="container">
+        <h1>Staff</h1>
+        <p>We are very grateful to have several dedicated staff members assisting the parish and coordinating many of its efforts!</p>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="business-card">
+                    <div class="media">
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/sr-donna-prickel.jpg"> </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">Sister Donna Prickel</h2>
+                            <div class="job">Parish Life Coordinator</div>
+                            <div class="mail"><a href="mailto:sisterdonna@millhousenchurch.com">sisterdonna@millhousenchurch.com</a> </div>
+                            <div class="mail">Home: <a href="tel:8125912362">812-591-2362</a> - Mobile: <a href="tel:5134102600">513-410-2600</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="business-card">
-                        <div class="media">
-                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/1ae200965d3c94a8c76ee639aa869461?d=identicon&s=120&r=g"> </div>
-                            <div class="media-body">
-                                <h2 class="media-heading">Kathaleen Westrick</h2>
-                                <div class="job">Religious Education Administrator</div>
-                                <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
-                                <div class="mail"><a href="tel:8125912433">812-591-2433</a></div>
-                            </div>
+            </div>
+            <div class="col-md-6">
+                <div class="business-card">
+                    <div class="media">
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="https://placeimg.com/170/200/nature"> </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">Kathaleen Westrick</h2>
+                            <div class="job">Religious Education Administrator</div>
+                            <div class="mail"><a href="mailto:kathy@millhousenchurch.com">kathy@millhousenchurch.com</a> </div>
+                            <div class="mail"><a href="tel:8125912433">812-591-2433</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="business-card">
-                        <div class="media">
-                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/075d92e60089daaf0ec1a3ed1754efd6?d=identicon&s=120&r=g"> </div>
-                            <div class="media-body">
-                                <h2 class="media-heading">Father William Turner</h2>
-                                <div class="job">Sacramental Minister</div>
-                                <div class="mail"><a href="tel:3175125410">317-512-5410</a></div>
-                                <div class="job"><a href="http://www.archindy.org/staff/priests/turner-william.html">About Father Bill</a></div>
-                            </div>
+            </div>
+            <div class="col-md-6">
+                <div class="business-card">
+                    <div class="media">
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/fr-bill-turner.png"> </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">Father William Turner</h2>
+                            <div class="job">Sacramental Minister</div>
+                            <div class="mail"><a href="tel:3175125410">317-512-5410</a></div>
+                            <div class="job"><a href="http://www.archindy.org/staff/priests/turner-william.html">About Father Bill</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="business-card">
-                        <div class="media">
-                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/a5f7faacdbe22bcd35955f78befe8cef?d=identicon&s=120&r=g"> </div>
-                            <div class="media-body">
-                                <h2 class="media-heading">Father John Geis</h2>
-                                <div class="job">Sacramental Minister</div>
-                                <div class="mail"><a href="tel:8125251254">812-525-1254</a> - <a href="mailto:jfgeis@gmail.com">jfgeis@gmail.com</a></div>
-                                <div class="job"><a href="http://www.archindy.org/staff/priests/geis-john.html">About Father John</a></div>
-                            </div>
+            </div>
+            <div class="col-md-6">
+                <div class="business-card">
+                    <div class="media">
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="/img/fr-john-geis.png"> </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">Father John Geis</h2>
+                            <div class="job">Sacramental Minister</div>
+                            <div class="mail"><a href="tel:8125251254">812-525-1254</a> - <a href="mailto:jfgeis@gmail.com">jfgeis@gmail.com</a></div>
+                            <div class="job"><a href="http://www.archindy.org/staff/priests/geis-john.html">About Father John</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="business-card">
-                        <div class="media">
-                            <div class="media-left"> <img class="media-object img-circle profile-img" src="//www.gravatar.com/avatar/0eabd1cb97f9f50e272e3083cabd88a1?d=identicon&s=120&r=g"> </div>
-                            <div class="media-body">
-                                <h2 class="media-heading">Sister Dianne Kaimann</h2>
-                                <div class="job">Bookkeeper</div>
-                                <div class="mail"><a href="mailto:sisterdianne@millhousenchurch.com">sisterdianne@millhousenchurch.com</a> </div>
-                            </div>
+            </div>
+            <div class="col-md-6">
+                <div class="business-card">
+                    <div class="media">
+                        <div class="media-left"> <img class="media-object img-circle profile-img" src="https://placeimg.com/170/200/nature"> </div>
+                        <div class="media-body">
+                            <h2 class="media-heading">Sister Dianne Kaimann</h2>
+                            <div class="job">Bookkeeper</div>
+                            <div class="mail"><a href="mailto:sisterdianne@millhousenchurch.com">sisterdianne@millhousenchurch.com</a> </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     {{.Include "/templates/footer.html"}}
 
 </body>
