--- a/faith-formation/high-school/index.html
+++ b/faith-formation/high-school/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  		{{.Include "/templates/head.html"}}
+    {{.Include "/templates/head.html"}}
     <title>High School Faith Formation - Immaculate Conception Church</title>
     <meta name="description" content="Educating the youth from 6th to 12th grade to help them learn, live, and grow in the Catholic faith.">
 </head>
 
 <body>
-    		{{.Include "/templates/header.html"}}
+    {{.Include "/templates/header.html"}}
 
-    		{{.Include "/templates/footer.html"}}
+    <div class="container">
+        <h1>Junior/Senior High School Faith Formation</h1>
+        <p>Classes are currently out for the summer and will resume this fall.</p>
+    </div>
+    {{.Include "/templates/footer.html"}}
 
 </body>
 
