--- a/about/contact/index.html
+++ b/about/contact/index.html
@@ -2,77 +2,78 @@
 <html lang="en">
 
 <head>
-  {{.Include "/templates/head.html"}}
+    {{.Include "/templates/head.html"}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Contact Us - Immaculate Conception Church</title>
     <meta name="description" content="If you need to get in touch with us, please don't hesitate!">
 </head>
 
-<body>    		{{.Include "/templates/header.html"}}
+<body> {{.Include "/templates/header.html"}}
 
-        <div class="container">
-            <h1>Contact Us</h1>
-            <div class="row contact-columns">
-                <div class="email col-md-4">
-                    <div class="contact-circle">
-                        <div class="fa fa-envelope fa-5x contact-icon"></div>
-                    </div>
-                    <!-- Text input -->
-                    <form class="form-horizontal" action="https://formspree.io/sisterdonna@millhousenchurch.com" method="POST">
-                        <fieldset>
-                            <h2>Email</h2>
-                            <p>Use the form below to shoot us an email, and we'll get back to you as soon as possible!</p>
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="full-name">Name</label>
-                                <div class="col-md-4">
-                                    <input id="full-name" name="Full Name" placeholder="" class="form-control input-md" required="" type="text"> </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="phone">Phone Number</label>
-                                <div class="col-md-4">
-                                    <input id="phone" name="Phone Number" placeholder="(xxx) xxx-xxxx" class="form-control input-md" type="text"> </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="email">Email Address</label>
-                                <div class="col-md-4">
-                                    <input id="email" name="email" placeholder="" class="form-control input-md" required="" type="text"> </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="message">Message</label>
-                                <div class="col-md-4">
-                                    <textarea class="form-control" id="message" name="Message"></textarea>
-                                </div>
-                            </div>
-                            <input type="hidden" name="_next" value="https://eggs.flexstart.me/thanks/" />
-                            <input type="hidden" name="_subject" value="Web Form Message" />
-                            <input type="hidden" name="_format" value="plain" />
-                            <input type="text" name="_gotcha" class="hide" />
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="submit"></label>
-                                <div class="col-md-4">
-                                    <button id="submit" class="btn btn-primary" type="submit" value="Send">Submit</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
+    <div class="container">
+        <h1>Contact Us</h1>
+        <div class="row contact-columns">
+            <div class="email col-md-4">
+                <div class="contact-circle">
+                    <div class="fa fa-envelope fa-5x contact-icon"></div>
                 </div>
-                <div class="phone col-md-4">
-                    <div class="contact-circle">
-                        <div class="fa fa-phone fa-5x contact-icon"></div>
-                    </div>
-                    <h2>Phone</h2>
-                    <p>Office: 812-591-2362</p>
-                    <p>Cell: 513-410-2600</p>
+                <!-- Text input -->
+                <form class="form-horizontal" action="https://formspree.io/sisterdonna@millhousenchurch.com" method="POST">
+                    <fieldset>
+                        <h2>Email</h2>
+                        <p>Use the form below to shoot us an email, and we'll get back to you as soon as possible!</p>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="full-name">Name</label>
+                            <div class="col-md-4">
+                                <input id="full-name" name="Full Name" placeholder="" class="form-control input-md" required="" type="text"> </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="phone">Phone Number</label>
+                            <div class="col-md-4">
+                                <input id="phone" name="Phone Number" placeholder="(xxx) xxx-xxxx" class="form-control input-md" type="text"> </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="email">Email Address</label>
+                            <div class="col-md-4">
+                                <input id="email" name="email" placeholder="" class="form-control input-md" required="" type="text"> </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="message">Message</label>
+                            <div class="col-md-4">
+                                <textarea class="form-control" id="message" name="Message"></textarea>
+                            </div>
+                        </div>
+                        <input type="hidden" name="_next" value="https://eggs.flexstart.me/thanks/" />
+                        <input type="hidden" name="_subject" value="Web Form Message" />
+                        <input type="hidden" name="_format" value="plain" />
+                        <input type="text" name="_gotcha" class="hide" />
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="submit"></label>
+                            <div class="col-md-4">
+                                <button id="submit" class="btn btn-primary" type="submit" value="Send">Submit</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+            <div class="phone col-md-4">
+                <div class="contact-circle">
+                    <div class="fa fa-phone fa-5x contact-icon"></div>
                 </div>
-                <div class="usps col-md-4">
-                    <div class="contact-circle">
-                        <div class="fa fa-home fa-5x contact-icon"></div>
-                    </div>
-                    <h2>Mail</h2>
-                    <p>2081 E County Road 820 S</p>
-                    <p>Greensburg, IN 47240</p>
+                <h2>Phone</h2>
+                <p>Office: 812-591-2362</p>
+                <p>Cell: 513-410-2600</p>
+            </div>
+            <div class="usps col-md-4">
+                <div class="contact-circle">
+                    <div class="fa fa-home fa-5x contact-icon"></div>
                 </div>
+                <h2>Mail</h2>
+                <p>2081 E County Road 820 S</p>
+                <p>Greensburg, IN 47240</p>
             </div>
         </div>
+    </div>
     {{.Include "/templates/footer.html"}}
 
 </body>
