Change Facebook, Catholic News

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
                                 <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
                             </div>
                             <div class="col-md-12">
-                                <iframe style="width: 90%; height: 325px; border: none; padding-top: 30px;" src="https://feed.mikle.com/widget/v2/23358/"></iframe>
+                                <!-- start feedwind code -->
+                                <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="23358/"></script>
+                                <!-- end feedwind code -->
                             </div>
                         </div>
                     </div>
@@ -172,6 +174,9 @@
                         <div class="social-media">
                             <h3>Like us on Facebook</h3>
                             <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" scrolling="no" frameborder="0" allowTransparency="true" class="facebook-embed"></iframe>
+                            <a href="https://www.facebook.com/Millhousen/">
+                                <button type="button" class="btn btn-default">Visit Facebook</button>
+                            </a>
                         </div>
                     </div>
                 </div>
