Fix Mobile Image Overflow

--- a/events/auction/index.html
+++ b/events/auction/index.html
@@ -17,7 +17,7 @@
         <div class="stripe gray-stripe auction-album">
             <h3>Auction 2016 Photos</h3> <span id="random_image">
   <script type="text/javascript"
-      src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=6&size=xsmall&cat_id=3"
+      src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=6&size=2small&cat_id=3"
       async>
   </script>
                     </span>
