--- a/temp.html
+++ b/temp.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  		{{.Include "/templates/head.html"}}
+    {{.Include "/templates/head.html"}}
     <title>Elementary Faith Formation - Immaculate Conception Church</title>
     <meta name="description" content="Educating the youth from preschool to 5th grade to help them learn, live, and grow in the Catholic faith.">
 </head>
 
 <body>
-    		{{.Include "/templates/header.html"}}
+    {{.Include "/templates/header.html"}}
 
-    		{{.Include "/templates/footer.html"}}
-    
+    <div class="container">
+        <h1>Elementary Faith Formation</h1>
+        <p>Classes are currently out for the summer and will resume this fall.</p>
+    </div>
+    {{.Include "/templates/footer.html"}}
+
 </body>
 
 </html>
