--- a/about/lay-leadership/index.html
+++ b/about/lay-leadership/index.html
@@ -11,7 +11,8 @@
     {{.Include "/templates/header.html"}}
     <div class="container">
         <h1>Lay Leadership</h1>
-        <p>Many passionate parishioners help the parish by taking leadership roles in councils and committees.</p>
+        <p>Elections are to be held soon!</p>
+        <!-- <p>Many passionate parishioners help the parish by taking leadership roles in councils and committees.</p>
         <h2>Board of Directors</h2>
         <p>Purpose, who we are, what we do</p>
 
@@ -31,7 +32,7 @@
         <p>Purpose, who we are, what we do</p>
 
         <h2>Youth Ministry Leader</h2>
-        <p>Purpose, who we are, what we do</p>
+        <p>Purpose, who we are, what we do</p> -->
 
     </div>
     {{.Include "/templates/footer.html"}}
