--- a/about/mass/index.html
+++ b/about/mass/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{.Include "/templates/head.html"}}
     <title>Mass - Immaculate Conception Church</title>
@@ -12,6 +13,7 @@
     <div class="container">
         <h1>Mass</h1>
         <p>We have Mass every Sunday at 8 AM. Join us!</p>
+        <img src="/img/altar.jpg" width="700" class="page-photo">
         <p>If 8 AM is inconvenient, check the Mass times of our <a href="/#cohort">nearby cohort parishes</a>.</p>
     </div>
 
