--- a/about/mission-statement/index.html
+++ b/about/mission-statement/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{.Include "/templates/head.html"}}
     <title>Mission Statement - Immaculate Conception Church</title>
@@ -8,11 +9,11 @@
 
 <body>
     {{.Include "/templates/header.html"}}
-    <div class="container">
-        <h1>Mission Statement</h1>
-        <blockquote>
+    <div class="stripe gray-stripe">
+        <div class="container">
+            <h1>Mission Statement</h1>
             <p>We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it. We commit ourselves to continue their work by:</p>
-            <ul>
+            <ul class="nocentre-list">
                 <li>living out Gospel values in our families and within the broader community</li>
                 <li>coming together to worship in faith</li>
                 <li>doing all in our power to insure that our parish doors remain open to everyone in our community as our parish is an integral part of this community</li>
@@ -21,7 +22,8 @@
                 <li>encouraging one another to support and participate by sharing our time, treasures, and talents in the works of the parish/church and of the community</li>
                 <li>and reaching out to share God's gifts with others</li>
             </ul>
-        </blockquote>
+            <img src="/img/mission-statement.jpg" width="700" class="page-photo">
+        </div>
     </div>
     {{.Include "/templates/footer.html"}}
 </body>
