--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{.Include "/templates/head.html"}}
     <title>Immaculate Conception Church | Millhousen, IN</title>
@@ -21,8 +22,8 @@
                 <div class="img-slide3">
                     <div class="carousel-caption">
                         <p>The parish auction is approaching quickly!</p>
-                        <a href="/events/auction/">
-                            <button type="button" class="btn btn-default">Learn More</button>
+                        <a href="/events/auction/" class="btn btn-default">
+                            Learn More
                         </a>
                     </div>
                 </div>
@@ -31,8 +32,8 @@
                 <div class="img-slide2">
                     <div class="carousel-caption">
                         <p>Join us for Mass every Sunday at 8 AM!</p>
-                        <a href="/about/directions/">
-                            <button type="button" class="btn btn-default">Get Directions</button>
+                        <a href="/about/directions/" class="btn btn-default">
+                            Get Directions
                         </a>
                     </div>
                 </div>
@@ -41,8 +42,8 @@
                 <div class="img-slide1">
                     <div class="carousel-caption">
                         <p>Built at the center of a German Catholic community, Immaculate Conception has been the heart of Millhousen since 1834</p>
-                        <a href="/about/history/">
-                            <button type="button" class="btn btn-default">Our History</button>
+                        <a href="/about/history/" class="btn btn-default">
+                            Our History
                         </a>
                     </div>
                 </div>
@@ -56,8 +57,8 @@
         <div class="mission-statement">
             <h2>Mission Statement</h2>
             <p class="lead-line">We, the Catholic Community of Immaculate Conception Church, Millhousen established in 1834, value the gift of faith handed on to us by those who built this parish and centered their lives around it.</p>
-            <a href="/about/mission-statement/">
-                <button type="button" class="btn btn-default">View the Full Statement</button>
+            <a href="/about/mission-statement/" class="btn btn-default">
+                View the Full Statement
             </a>
         </div>
     </div>
@@ -65,8 +66,8 @@
         <div class="upcoming-events">
             <ul id="events-upcoming" class="list1"></ul>
 
-            <a href="/calendar/">
-                <button type="button" class="btn btn-inv btn-calendar">View the Full Calendar</button>
+            <a href="/calendar/" class="btn btn-inv btn-calendar">
+                View the Full Calendar
             </a>
         </div>
     </div>
@@ -95,8 +96,8 @@
             </div>
 
         </div>
-        <a href="/about/staff/">
-            <button type="button" class="btn btn-inv btn-staff">Learn More</button>
+        <a href="/about/staff/" class="btn btn-default btn-staff">
+            Learn More
         </a>
         <div class="stripe white-stripe">
             <h2>Catholic Community</h2>
@@ -105,22 +106,22 @@
                 <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/103.jpg" alt="St. Maurice Napoleon" height="200" />
                     <h4>St. Maurice</h4>
                     <h5>Napoleon</h5>
-                    <a href="http://stmauricechurch.org/index.html">
-                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    <a href="http://stmauricechurch.org/index.html" class="btn btn-inv">
+                        Visit Site
                     </a>
                 </div>
                 <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/097.jpg" alt="Immaculate Conception Millhousen" height="200" />
                     <h4>Immaculate Conception</h4>
                     <h5>Millhousen</h5>
-                    <a href="/about/mass/">
-                        <button type="button" class="btn btn-inv">Mass Time</button>
+                    <a href="/about/mass/" class="btn btn-inv">
+                        Mass Time
                     </a>
                 </div>
                 <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/116C.jpg" alt="St. John the Baptist Osgood" height="200" />
                     <h4>St. John the Baptist</h4>
                     <h5>Osgood</h5>
-                    <a href="http://www.stjohncatholicchurchosgood.com/">
-                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    <a href="http://www.stjohncatholicchurchosgood.com/" class="btn btn-inv">
+                        Visit Site
                     </a>
                 </div>
 
@@ -128,14 +129,14 @@
             <div class="row">
                 <div class="col-md-6"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Roman_Catholic_Archdiocese_of_Indianapolis.svg" alt="ArchIndy Coat of Arms" height="200" />
                     <h3>Archdiocese of Indianapolis</h3>
-                    <a href="http://www.archindy.org/">
-                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    <a href="http://www.archindy.org/" class="btn btn-inv">
+                        Visit Site
                     </a>
                 </div>
                 <div class="col-md-6"><img src="/img/deanery.jpg" alt="Batesville Deanery Logo" height="200" />
                     <h3>Batesville Deanery</h3>
-                    <a href="http://batesvilledeanery.com/">
-                        <button type="button" class="btn btn-inv">Visit Site</button>
+                    <a href="http://batesvilledeanery.com/" class="btn btn-inv">
+                        Visit Site
                     </a>
                 </div>
             </div>
@@ -151,8 +152,8 @@
       async>
   </script>
                     </span>
-                            <a href="https://icgallery.flexstart.me/">
-                                <button type="button" class="btn btn-default">Visit the Gallery</button>
+                            <a href="https://icgallery.flexstart.me/" class="btn btn-default">
+                                Visit the Gallery
                             </a>
                         </div>
                     </div>
@@ -161,7 +162,7 @@
                             <div class="col-md-12">
 
                                 <h3>Daily Readings</h3>
-                                <iframe width="150" height="120" scrolling="no" frameborder="0" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
+                                <iframe width="150" height="120" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
                             </div>
                             <div class="col-md-12">
                                 <!-- start feedwind code -->
@@ -173,9 +174,9 @@
                     <div class="col-md-4">
                         <div class="social-media">
                             <h3>Like us on Facebook</h3>
-                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" scrolling="no" frameborder="0" allowTransparency="true" class="facebook-embed"></iframe>
-                            <a href="https://www.facebook.com/Millhousen/">
-                                <button type="button" class="btn btn-default">Visit Facebook</button>
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" class="facebook-embed"></iframe>
+                            <a href="https://www.facebook.com/Millhousen/" class="btn btn-default">
+                                Visit Facebook
                             </a>
                         </div>
                     </div>
@@ -201,6 +202,7 @@
             pastHeading: '<h2>Past Events</h2>',
             format: ['<h4>', '*summary*', '</h4>', '*date*']
         });
+
     </script>
 </body>
 
