--- a/index.html
+++ b/index.html
@@ -99,85 +99,78 @@
         <a href="/about/staff/" class="btn btn-default btn-staff">
             Learn More
         </a>
-        <div class="stripe white-stripe">
-            <h2>Catholic Community</h2>
-            <h3 id="cohort">Our Cohort</h3>
-            <div class="row">
-                <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/103.jpg" alt="St. Maurice Napoleon" height="200" />
-                    <h4>St. Maurice</h4>
-                    <h5>Napoleon</h5>
-                    <a href="http://stmauricechurch.org/index.html" class="btn btn-inv">
+    </div>
+    <div class="stripe white-stripe">
+        <h2>Catholic Community</h2>
+        <h3 id="cohort">Our Cohort</h3>
+        <div class="row">
+            <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/103.jpg" alt="St. Maurice Napoleon" height="200" />
+                <h4>St. Maurice</h4>
+                <h5>Napoleon</h5>
+                <a href="http://stmauricechurch.org/index.html" class="btn btn-inv">
                         Visit Site
                     </a>
-                </div>
-                <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/097.jpg" alt="Immaculate Conception Millhousen" height="200" />
-                    <h4>Immaculate Conception</h4>
-                    <h5>Millhousen</h5>
-                    <a href="/about/mass/" class="btn btn-inv">
+            </div>
+            <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/097.jpg" alt="Immaculate Conception Millhousen" height="200" />
+                <h4>Immaculate Conception</h4>
+                <h5>Millhousen</h5>
+                <a href="/about/mass/" class="btn btn-inv">
                         Mass Time
                     </a>
-                </div>
-                <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/116C.jpg" alt="St. John the Baptist Osgood" height="200" />
-                    <h4>St. John the Baptist</h4>
-                    <h5>Osgood</h5>
-                    <a href="http://www.stjohncatholicchurchosgood.com/" class="btn btn-inv">
-                        Visit Site
-                    </a>
-                </div>
-
             </div>
-            <div class="row">
-                <div class="col-md-6"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Roman_Catholic_Archdiocese_of_Indianapolis.svg" alt="ArchIndy Coat of Arms" height="200" />
-                    <h3>Archdiocese of Indianapolis</h3>
-                    <a href="http://www.archindy.org/" class="btn btn-inv">
+            <div class="col-md-4"><img src="https://www.archindy.org/parishes/files/parish-photos/116C.jpg" alt="St. John the Baptist Osgood" height="200" />
+                <h4>St. John the Baptist</h4>
+                <h5>Osgood</h5>
+                <a href="http://www.stjohncatholicchurchosgood.com/" class="btn btn-inv">
                         Visit Site
                     </a>
-                </div>
-                <div class="col-md-6"><img src="/img/deanery.jpg" alt="Batesville Deanery Logo" height="200" />
-                    <h3>Batesville Deanery</h3>
-                    <a href="http://batesvilledeanery.com/" class="btn btn-inv">
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-md-6"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Roman_Catholic_Archdiocese_of_Indianapolis.svg" alt="ArchIndy Coat of Arms" height="200" />
+                <h3>Archdiocese of Indianapolis</h3>
+                <a href="http://www.archindy.org/" class="btn btn-inv">
                         Visit Site
                     </a>
-                </div>
+            </div>
+            <div class="col-md-6"><img src="/img/deanery.jpg" alt="Batesville Deanery Logo" height="200" />
+                <h3>Batesville Deanery</h3>
+                <a href="http://batesvilledeanery.com/" class="btn btn-inv">
+                        Visit Site
+                    </a>
             </div>
         </div>
-        <div class="stripe gray-stripe">
-            <div class="community">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="photo-gallery">
-                            <h3>Photo Gallery</h3> <span id="random_image">
+    </div>
+    <div class="stripe gray-stripe">
+        <div class="community">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="photo-gallery">
+                        <h3>Photo Gallery</h3> <span id="random_image">
   <script type="text/javascript"
       src="//icgallery.flexstart.me/piwigo-random-backend.php?maximages=9&size=square&target=_blank"
       async>
   </script>
                     </span>
-                            <a href="https://icgallery.flexstart.me/" class="btn btn-default">
+                        <a href="https://icgallery.flexstart.me/" class="btn btn-default">
                                 Visit the Gallery
                             </a>
-                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="row">
-                            <div class="col-md-12">
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12">
 
-                                <h3>Daily Readings</h3>
-                                <iframe width="150" height="120" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
-                            </div>
-                            <div class="col-md-12">
-                                <!-- start feedwind code -->
-                                <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="23358/"></script>
-                                <!-- end feedwind code -->
-                            </div>
+                            <h3>Daily Readings</h3>
+                            <iframe width="150" height="120" src="https://www.catholiccontent.com/150/mass/" class="daily-readings"></iframe>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="social-media">
-                            <h3>Like us on Facebook</h3>
-                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMillhousen&tabs=timeline&width=420&height=450&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" class="facebook-embed"></iframe>
-                            <a href="https://www.facebook.com/Millhousen/" class="btn btn-default">
-                                Visit Facebook
+                        <div class="col-md-12">
+                            <div class="social-media">
+                                <a href="https://www.facebook.com/Millhousen/" class="btn btn-default">
+                                Check us out on Facebook!
                             </a>
+                            </div>
                         </div>
                     </div>
                 </div>
